# cf-browser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-TW.md  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: accessibility-tree.py  authenticated-scraping.py  basic-usage.py  crawl-and-analyze.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/cf_browser_mcp/: __init__.py  server.py
mcp-server/tests/: test_server.py
sdk/: README.md  pyproject.toml
sdk/src/cf_browser/: __init__.py  _normalizers.py  _shared.py  client.py  direct.py  exceptions.py  models.py
sdk/tests/: test_client.py  test_direct.py
skills/changelog-monitor/: SKILL.md
skills/competitor-watch/: SKILL.md
skills/content-extractor/: SKILL.md
skills/doc-fetcher/: SKILL.md
skills/site-auditor/: SKILL.md
skills/visual-qa/: SKILL.md
worker/: .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.toml.example
worker/src/: index.ts  types.ts
worker/src/lib/: cache-key.ts  cf-api.ts  param-map.ts  puppeteer.ts  response-normalizers.ts  validate-url.ts
worker/src/middleware/: auth.ts  cache.ts  rate-limit.ts
worker/src/routes/: a11y.ts  click.ts  content.ts  crawl.ts  evaluate.ts  interact.ts  json.ts  links.ts  markdown.ts  pdf.ts  scrape.ts  screenshot.ts  snapshot.ts  submit-form.ts  type.ts
worker/tests/: auth.test.ts  cache-key.test.ts  health.test.ts  interaction-routes.test.ts  param-map.test.ts  rate-limit.test.ts  routes.test.ts  validate-url.test.ts
