[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-browser-mcp"
version = "2.0.1"
description = "MCP Server with 15 browser tools for Claude Code — powered by Cloudflare Browser Rendering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Claude World", email = "hello@claude-world.com" },
]
keywords = [
    "mcp",
    "cloudflare",
    "browser-rendering",
    "claude-code",
    "model-context-protocol",
    "web-scraping",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "cf-browser>=2.0.1,<3",
    "mcp[cli]>=1.0",
]

[project.scripts]
cf-browser-mcp = "cf_browser_mcp.server:main"

[project.urls]
Homepage = "https://github.com/claude-world/cf-browser"
Documentation = "https://github.com/claude-world/cf-browser#readme"
Repository = "https://github.com/claude-world/cf-browser"
Issues = "https://github.com/claude-world/cf-browser/issues"
Changelog = "https://github.com/claude-world/cf-browser/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/cf_browser_mcp"]
