[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-browser"
version = "0.1.0"
description = "Python SDK for CF Browser Rendering service"
readme = "README.md"
authors = [
    { name = "Claude World" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["cloudflare", "browser-rendering", "headless-chrome", "web-scraping", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/claude-world/cf-browser"
Repository = "https://github.com/claude-world/cf-browser"
"Bug Tracker" = "https://github.com/claude-world/cf-browser/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.hatch.build.targets.wheel]
packages = ["src/cf_browser"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
