[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-browser"
version = "1.1.0"
description = "Python SDK for Cloudflare Browser Rendering — read any web page from Python (Worker + Direct mode)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Claude World", email = "hello@claude-world.com" },
]
keywords = [
    "cloudflare",
    "browser-rendering",
    "headless-chrome",
    "web-scraping",
    "mcp",
    "claude-code",
    "browser-automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/claude-world/cf-browser"
Documentation = "https://github.com/claude-world/cf-browser#readme"
Repository = "https://github.com/claude-world/cf-browser"
Issues = "https://github.com/claude-world/cf-browser/issues"
Changelog = "https://github.com/claude-world/cf-browser/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.hatch.build.targets.wheel]
packages = ["src/cf_browser"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
